set frontend and set API

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack Web scrapping</title>
+    <title>Full Stack Web Scrapping</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Game Plalist</h1>
+
+    <h4>Pesquise novo game</h4>
+    <input 
+        type="text" 
+        name="url" 
+        id="url" 
+        placeholder="Insira a URL do game que Você desja pesquisar..."
+    >
+    <button type="submit" id="send">Enviar</button>
+
+    <div class="container"></div>
+
+    <script src="index.js"></script>
 </body>
 </html>
