--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Game Plalist</h1>
+    <header>
+        <h1>Torrent playlist</h1>
 
-    <h4>Pesquise novo game</h4>
-    <input 
-        type="text" 
-        name="url" 
-        id="url" 
-        placeholder="Insira a URL do game que Você desja pesquisar..."
-    >
-    <button type="submit" id="send">Enviar</button>
+        <div class="form-control">
+            <h4>Pesquise novo game: </h4>
+            <input 
+                type="text" 
+                name="url" 
+                id="url" 
+                placeholder="Insira a URL do game que Você deseja pesquisar..."
+            >
+        </div>
+        <button type="submit" id="send">Enviar</button>
+    </header>
 
     <div class="container"></div>
 
