add database dependencies

--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,12 @@
         <h1>Torrent playlist</h1>
 
         <div class="form-control">
-            <h4>Pesquise novo game: </h4>
+            <h4>Adicione novo jogo: </h4>
             <input 
                 type="text" 
                 name="url" 
                 id="url" 
-                placeholder="Insira a URL do game que Você deseja pesquisar..."
+                placeholder="Insira a URL do jogo que Você deseja adicionar..."
             >
             <button type="submit" id="send">Enviar</button>
         </div>
